objects/Category__x.object
<CustomObject>
    <externalDataSource>awsDynamodbXds</externalDataSource>
    <externalName>northwind</externalName>
    <fields>
        <fullName>CategoryID__c</fullName>
        <externalDeveloperName>category</externalDeveloperName>
        <label>Category ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Category_Name__c</fullName>
        <externalDeveloperName>categoryName</externalDeveloperName>
        <label>Category Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <externalDeveloperName>data</externalDeveloperName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <label>Category</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Category_Name__c</columns>
        <columns>CategoryID__c</columns>
        <columns>Description__c</columns>
        <columns>ExternalId</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>Categories</pluralLabel>
</CustomObject>